# grandiorite

./: .gitignore  LICENSE  README.md  composer.json  run_all.sh
assembly/masm/: Grandiorite.asm  Project.vcxproj  README.md
c/: README.md  main.c
c#/nuget/: Class1.cs  README.md  grandiorite.csproj
c++/: README.md  a.out  main  main.cpp
clojure/: README.md  lein  project.clj
clojure/src/grandiorite/: core.clj
erlang/: .gitignore  README.md  mix.exs
erlang/lib/: grandiorite.ex
erlang/test/: grandiorite_test.exs
go/: README.md  go.mod  go.sum  main.go
go/grandiorite/: grandiorite.go
haskell/: CHANGELOG.md  Main.hs  README.md  Setup.hs  grandiorite.cabal
java/: README.md  pom.xml
java/grandiorite-base/: pom.xml
java/maven/: README.md  pom.xml
javascript/: grandiorite.js  package.json
javascript/npm/: index.js  package-lock.json
javascript/pnpm/: README.md  package.json  pnpm-lock.yaml
mysql/: README.md  grandiorite.sql
objective-c/: LICENSE  README.md  main.cpp  main.m
ocaml/: README.md  grandiorite.opam  main.ml
php/: README.md  main.php
php/src/: Grandiorite.php
python/: README.md  main.py  setup.py
python/conda/: README.md  environment.yml  main.py  setup.py
python/pipenv/: Pipfile  README.md
python/poetry/: README.md  pyproject.toml
python/poetry/src/demo/: main.py
r/: DESCRIPTION  README.md  main.R
r/renv/: activate.R
ruby/: README.md  grandiorite.gemspec  main.rb
ruby/lib/: grandiorite.rb
rust/: Cargo.toml  README.md
rust/src/: main.rs
swift/: Package.swift  README.md
swift/Tests/: LinuxMain.swift
(+11 files in other folders)
